<resources>
    <string name="app_name">Sample App</string>
    <string name="heading_home">Welcome!</string>
    <string name="button_text">Click Here!</string>
    <string name="sample_image_desc">Sample Image</string>
    <string name="toast_sample_text">Toast Sample</string>
    <string name="input_text">Enter a sample text here.</string>
    <string name="toastbtn_dec">Click below send button to view toast message.</string>
    <string name="todo">TODO</string>
    <string name="sample_orientation">Sample Orientation</string>
    <string name="clickmebtn_text">Click me!</string>
    <string name="previous_btntext">Previous</string>
    <string name="dialogTitle">Dialog example</string>
    <string name="dialogMessage">Just clcik any choices below,</string>
    <string name="nextButtonText">Next</string>
</resources>