<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/toast_sample_text"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/toastInput"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="257dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#5213C3"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/input_text"
        android:inputType="textPersonName"
        android:textColor="#673AB7"
        android:textColorHint="#BE673AB7"
        android:textColorLink="#C9673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/toastBtnText"
        android:layout_width="321dp"
        android:layout_height="22dp"
        android:layout_marginTop="124dp"
        android:text="@string/toastbtn_dec"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toastInput" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toastBtnText"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginBottom="128dp"
        android:background="#673AB7"
        android:text="@string/nextButtonText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>