<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orientHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sample_orientation"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textInputSample"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="334dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:backgroundTint="#5213C3"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/input_text"
        android:inputType="textPersonName"
        android:textColor="#673AB7"
        android:textColorHint="#BE673AB7"
        android:textColorLink="#C9673AB7"
        app:layout_constraintBottom_toTopOf="@+id/buttonClickme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientHeading"
        app:layout_constraintVertical_bias="0.881" />

    <Button
        android:id="@+id/buttonClickme"
        android:layout_width="173dp"
        android:layout_height="49dp"
        android:layout_marginBottom="176dp"
        android:background="#673AB7"
        android:fontFamily="sans-serif-medium"
        android:text="@string/clickmebtn_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPrevious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginBottom="128dp"
        android:background="#673AB7"
        android:text="@string/previous_btntext"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>