<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading_home"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/heading_home"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="290dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/sample_image_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_home"
        app:srcCompat="@drawable/image_sample"
        tools:srcCompat="@drawable/image_sample" />

    <Button
        android:id="@+id/cilckhere_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginBottom="80dp"
        android:background="#673AB7"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.861" />

</androidx.constraintlayout.widget.ConstraintLayout>